src/main.scss
@import '@/style/theme.scss';
@import '@/style/fonts.scss';
@import '@/style/mixins.scss';

@mixin blurred-page($left-position) {
  position: absolute;
  filter: blur(1px);
  left: $left-position;
}

html,
body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
  width: 100%;
}

#root {
  min-height: inherit;
}

p,
h1,
h2,
h3 {
  margin: 0;
}

p {
  letter-spacing: 0.2px;
}

.okp4-dataverse-portal-main-layout {
  @include with-theme() {
    min-height: inherit;
    display: flex;
    width: 100%;
    background-color: themed('background');
    position: relative;
    overflow-x: hidden;
  }

  .okp4-dataverse-portal-page-layout {
    flex: 1;
    grid-template-rows: max-content;
    width: 100%;
    min-height: inherit;
    row-gap: 15px;

    @include mobile-bp {
      @include grid-container($colsNb: 6, $gutter: 16px);
      padding: 0 4%;

      &.expanded-sidebar {
        @include blurred-page(299px);
      }
    }

    @include tablet-bp {
      @include grid-container($colsNb: 8, $gutter: 16px);
      padding: 0 3%;
      row-gap: 48px;

      &.expanded-sidebar {
        @include blurred-page(376px);
      }
    }

    @include desktop-bp {
      @include grid-container($gutter: 34px);
      padding: 0 2%;
    }

    @include large-desktop-bp {
      @include grid-container($gutter: 48px) {
        padding: 0 2.5%;
      }
    }
  }
}

